Lesson 15: Deploy movioe app

--- a/movie-app/index.css
+++ b/movie-app/index.css
@@ -37,6 +37,7 @@ header h1 {
     font-family: inherit;
     font-size: 1rem;
     padding: 0.5rem 1rem;
+    color: #fff
 }
 
 .search::placeholder {
